<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".EmailPasswordActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/sooin_medical_logo"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email_en"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:bootstrapSize="lg"
        app:bootstrapBrand="success"
        app:roundedCorners="true"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:bootstrapSize="lg"
        app:bootstrapBrand="success"
        app:roundedCorners="true"/>

<!--    <Button-->
<!--        android:id="@+id/btSignIn"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="start"-->
<!--        android:layout_marginStart="48dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="48dp"-->
<!--        android:textColor="@color/colorWhite"-->
<!--        android:text="@string/action_sign_in_short" />-->

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:textColor="@color/colorWhite"
        android:text="@string/action_sign_in_short"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:showOutline="false"
        app:roundedCorners="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cbSaveLoginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_login_info"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCreateAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "/>
        <TextView
            android:id="@+id/tvFindPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비밀번호 찾기"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</LinearLayout>